Overlap on homepage fixed

--- a/css1/chat.css
+++ b/css1/chat.css
@@ -8,7 +8,7 @@
   position: fixed;
   bottom: 0;
   right: 15px;
-  z-index: 9;
+  z-index: 999;
 }
 img {
   max-width: 100%;
